fix broken style

--- a/src/app/components/playlist/playlist.component.css
+++ b/src/app/components/playlist/playlist.component.css
@@ -8,11 +8,20 @@
   filter: opacity(50%);
 }
 
+.player-controls {
+  padding-top: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
 .play-button {
+  display: flex;
+  justify-content: center;
   font-size: 2rem;
   background-color: red;
   border-radius: 7%;
   color: white;
+  width: 10vw;
 }
 
 .playlist {
